<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_act_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="43"
            android:adjustViewBounds="true"
            android:background="@drawable/img_header"
            android:scaleType="fitXY">

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_button_settings"
                android:onClick="onClickBtnSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btn_shop"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/style_button_shop"
                android:onClick="onClickBtnShop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/img_words_background"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:adjustViewBounds="true"
                android:src="@drawable/img_main_nr"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45" />

            <TextView
                android:id="@+id/words_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_words"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_words_background"
                app:layout_constraintEnd_toEndOf="@id/img_words_background"
                app:layout_constraintStart_toStartOf="@id/img_words_background"
                app:layout_constraintTop_toTopOf="@id/img_words_background" />

            <ImageView
                android:id="@+id/main_flag"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="49dp"
                android:layout_marginBottom="6dp"
                android:adjustViewBounds="true"
                android:src="@drawable/flag_eng_2"
                app:layout_constraintBottom_toTopOf="@id/header_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/words_num" />

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:gravity="center"
                android:text="@string/words_learned"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_words_background"
                app:layout_constraintEnd_toEndOf="@id/img_words_background"
                app:layout_constraintStart_toStartOf="@id/img_words_background"
                app:layout_constraintTop_toTopOf="@id/img_words_background" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="57">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_ad"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:background="@drawable/style_main_buttons"
                    android:onClick="onClickButtonAd">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:text="@string/newApp"
                        android:textColor="@color/red_04"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/icon_ad"
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="20"
                            android:src="@drawable/icon_ad_expressenglish" />

                        <LinearLayout
                            android:id="@+id/container_text_ad"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="70"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/title_ad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/expressEnglish"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/sub_title_ad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/expressEnglishSubTitle"
                                android:textColor="@color/white60"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/style_main_buttons"
                    android:onClick="onClickButtonOne"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_calendar"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="20"
                        android:src="@drawable/icon_calendar" />

                    <LinearLayout
                        android:id="@+id/container_text_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="70"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_title_1"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/sub_title_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_sub_title_1"
                            android:textColor="@color/white60"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_line"
                        android:layout_width="wrap_content"
                        android:layout_height="77dp"
                        android:layout_marginStart="25dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_line" />

                    <LinearLayout
                        android:id="@+id/sub_item_2"
                        android:layout_width="match_parent"
                        android:layout_height="105dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/style_main_buttons"
                        android:onClick="onClickButtonTwo"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/icon_repeat"
                            android:layout_width="0dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="13dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="20"
                            android:src="@drawable/icon_repeat" />

                        <LinearLayout
                            android:id="@+id/container_text_2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="3dp"
                            android:layout_weight="70"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/title_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_title_2"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/sub_title_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_sub_title_2"
                                android:textColor="@color/white60"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/item_3"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/style_main_buttons"
                    android:onClick="onClickButtonThree"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_games"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="20"
                        android:src="@drawable/icon_games" />

                    <LinearLayout
                        android:id="@+id/container_text_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="80"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_title_3"
                            android:textSize="23sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/sub_title_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:text="@string/main_sub_title_3"
                            android:textColor="@color/white60" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>